--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable name="comment" type="com.cango.basicdemo.db.entity.CommentEntity"/>
     </data>
-    <TextView android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:minHeight="50dp"
-              android:background="@android:color/darker_gray"
-              android:text="@{comment.text}"
-              android:padding="8dp"/>
+    <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="50dp"
+            android:layout_marginTop="8dp"
+            app:cardBackgroundColor="@android:color/darker_gray">
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="@{comment.text}"
+        />
+    </androidx.cardview.widget.CardView>
+
 </layout>
